Sat Mar 12 02:27:07 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c ({d,dt}_lite_marshal_load): checks the given argument.

Sat Mar 12 01:26:24 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: changed some directives.

Sat Mar 12 01:16:02 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c, ext/date/lib/*: moved rdoc descriptions.

Sat Mar 12 00:06:24 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/lib: moved from lib.

Fri Mar 11 23:32:38 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/delta*: removed undocumented delta.

Fri Mar 11 18:42:43 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (find_executable0): should exclude directories.

Fri Mar 11 01:40:35 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* process.c (proc_getmaxgroups, proc_setmaxgroups): Process#maxgroups
	  and Process#maxgroups= now raise NotImplementedError if the
	  platform don't support supplementary groups concept.

Fri Mar 11 01:25:03 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* process.c (get_sc_ngroups_max): return -1 if platform don't
	  support NGROUPS_MAX.

Thu Mar 10 22:28:15 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_ssl.h: parenthesize macro arguments.

Thu Mar 10 21:59:37 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y (parser_encode_length): add exception as UTF8-MAC for
	  magic comment's emacs newline specifier
	  patched by James M. Lawrence [ruby-core:35476] fixes #4489

Thu Mar 10 16:00:22 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y (parser_encode_length): fix typo: the length of
	  "-dos" and "-mac" is not 5 but 4.
	  patched by James M. Lawrence [ruby-core:35476] fixes #4489

Thu Mar 10 10:52:01 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_require.rb: setting too long string to ENV causes
	  Errno::EINVAL on Windows.  long path name errors may causes over
	  about 1024 bytes, then limit it about 4000 bytes.
